<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.magiclane.sdk.core.GemSurfaceView
            android:id="@+id/gem_surface_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/top_panel"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_margin="10dp"
            android:background="@color/black"
            android:elevation="5dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/nav_icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintBottom_toTopOf="@id/nav_instruction_distance"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/nav_instruction_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/nav_icon"
                app:layout_constraintStart_toStartOf="@id/nav_icon"
                app:layout_constraintTop_toBottomOf="@id/nav_icon" />

            <TextView
                android:id="@+id/nav_instruction"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:ellipsize="end"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/nav_icon"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottom_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:elevation="5dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/eta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/rtt"
                app:layout_constraintEnd_toStartOf="@id/rtt"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/rtt" />

            <TextView
                android:id="@+id/rtt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/file_formats_group"
                app:layout_constraintEnd_toStartOf="@id/rtd"
                app:layout_constraintStart_toEndOf="@id/eta"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/rtd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/rtt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/rtt"
                app:layout_constraintTop_toTopOf="@id/rtt" />

            <TextView
                android:id="@+id/file_format_text"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="File format:"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/file_formats_group"
                app:layout_constraintBottom_toBottomOf="@id/file_formats_group"/>
            
            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/file_formats_group"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:singleSelection="true"
                app:selectionRequired="true"
                app:layout_constraintTop_toBottomOf="@id/rtt"
                app:layout_constraintStart_toEndOf="@id/file_format_text"
                app:layout_constraintEnd_toEndOf="parent">

                <Button
                    android:id="@+id/ff_gpx"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=".gpx"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/ff_kml"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=".kml"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/ff_json"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=".json"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/ff_lat_lon"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Lat Lon text"
                    android:textAllCaps="false" />

            </com.google.android.material.button.MaterialButtonToggleGroup>

            <TextView
                android:id="@+id/interval_text"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="Interval seconds:"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/interval_slider"
                app:layout_constraintBottom_toBottomOf="@id/interval_slider"/>
            
            <com.google.android.material.slider.Slider
                android:id="@+id/interval_slider"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                android:valueFrom="0.5"
                android:valueTo="10"
                android:stepSize="0.5"
                android:value="0.5"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toBottomOf="@id/file_formats_group"
                app:layout_constraintEnd_toStartOf="@id/seconds_text"
                app:layout_constraintStart_toEndOf="@id/interval_text"/>
            
            <TextView
                android:id="@+id/seconds_text"
                android:layout_width="40dp"
                android:layout_height="0dp"
                tools:text="10s "
                android:gravity="center"
                android:layout_margin="10dp"
                app:layout_constraintTop_toTopOf="@id/interval_slider"
                app:layout_constraintBottom_toBottomOf="@id/interval_slider"
                app:layout_constraintStart_toEndOf="@id/interval_slider"
                app:layout_constraintEnd_toEndOf="parent"
                />
            
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/follow_cursor_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:src="@drawable/ic_baseline_gps_fixed_24"
            android:visibility="gone"
            app:backgroundTint="@color/purple_500"
            app:layout_constraintBottom_toTopOf="@id/save_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/white"
            tools:ignore="ContentDescription" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:visibility="gone"
            app:backgroundTint="@color/purple_500"
            app:icon="@drawable/save_34"
            app:iconTint="@color/white"
            app:layout_constraintBottom_toTopOf="@id/start_stop"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="ContentDescription" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/start_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:foregroundTint="@color/start_color"
            android:src="@drawable/play_arrow_34"
            android:visibility="gone"
            app:backgroundTint="@color/start_color"
            app:layout_constraintBottom_toTopOf="@id/bottom_panel"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/white"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/status_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/status_text_background"
            android:maxWidth="260dp"
            android:padding="10dp"
            android:textSize="12sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/bottom_panel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Navigation started" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
