...
            app:paddingLeftWithSystemWindowInsets='@{@dimen/small_padding}'
            app:paddingRightWithSystemWindowInsets='@{@dimen/small_padding}'
            android:paddingBottom="12dp"
            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/settings_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/big_padding"
            android:src="@drawable/ic_baseline_settings_24"
            android:visibility="gone"
            app:backgroundTint="@color/primary"
...
